--- a/Receita/index.html
+++ b/Receita/index.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Receita</title>
+    <title>Receita de omelete</title>
 </head>
 <body>
-    
+    <div>
+        <img src="omelete-crescer-1-1024x576.png" alt="imagem sobre um belo e lindo omelete">
+        <h1>Receita de omelete simples</h1>
+        <p>Um prato simples de se preparar,que vai lhe fornecer uma boa quantidade de calorias,além de oferecer proteinas e carboidratos,
+            ótimo para se comer no dia a dia e melhor ainda se recheá-lo
+        </p>
+    <div>
+    <h2>Tempo de preparo</h2>
+
+    <ul>
+
+        <li>
+            <strong>Total :</strong> Aproximadamente 10 minutos
+        </li>
+        <li>
+
+            <strong>Preparo :</strong> 5 minutos
+        </li>
+        <li>
+            <strong>Cozimento :</strong> 5 minutos
+        </li>
+    </ul>
+     </div>
+</div>
 </body>
 </html>
