--- a/Receita/index.html
+++ b/Receita/index.html
@@ -85,7 +85,38 @@
         </ol>
     </div>
 
+    <hr>
+    <div>
 
+        <h2>Informações nutricionais</h2>
+        <p>A tabela abaixo mostra os valores nutricionais do alimento(pode variar de acordo com o recheio)</p>
+
+
+        <table>
+
+            <tr>
+                <th>Calorias</th>
+                <td>277kcal</td>
+                
+            </tr>
+
+            <tr>
+
+                <th>Carboidratos</th>
+                <td>2g</td>
+
+            </tr>
+            <tr>
+                <th>Proteínas</th>
+                <td>20g</td>
+            </tr>
+            <tr>
+                <th>Gorduras</th>
+                <td>22g</td>
+            </tr>
+
+        </table>
+    </div>
 </div>
 </body>
 </html>
