--- a/Receita/index.html
+++ b/Receita/index.html
@@ -16,7 +16,7 @@
         <p>Um prato simples de se preparar,que vai lhe fornecer uma boa quantidade de calorias,além de oferecer proteinas e carboidratos,
             ótimo para se comer no dia a dia e melhor ainda se recheá-lo
         </p>
-    <div>
+    <div class="tempo">
     <h2>Tempo de preparo</h2>
 
     <ul>
@@ -34,7 +34,7 @@
     </ul>
      </div>
 
-    <div>
+    <div class="ingredientes">
     <h2>Ingredientes</h2>
     
     <ul>
@@ -50,7 +50,7 @@
     </div>
     <hr>
 
-    <div>
+    <div class="preparo">
 
         <h2>Modo de preparo</h2>
         <ol>
@@ -90,7 +90,7 @@
     </div>
 
     <hr>
-    <div>
+    <div class="nutricional">
 
         <h2>Informações nutricionais</h2>
         <p>A tabela abaixo mostra os valores nutricionais do alimento(pode variar de acordo com o recheio)</p>
