--- a/Receita/index.html
+++ b/Receita/index.html
@@ -68,17 +68,17 @@
                 <strong>Cozinhe a omelete</strong> Assim que a gordura usada estiver formando bolhas ou derretida,despeje os ovos,incline a frigideira para que cubram toda a superficie da panela.
             </li>
             <li>
-                <strong> Adicione os recheios(opciona) :</strong> Quando os ovos começarem a firmar as bordas,mas meio liquidos no centro,espalhe o recheio sobre uma metade da omelete.
+                <strong> Adicione os recheios(opcional) :</strong> Quando os ovos começarem a firmar as bordas,mas meio liquidos no centro,espalhe o recheio sobre uma metade da omelete.
 
             </li>
             <li>
 
-                <strong>Dobre e sirva</strong> Enquanto estiver cozinhando,use uma espatula para virar uma parte sobre a outra,cozinhe até o ponto que preferir e após isso sirva.
+                <strong>Dobre e sirva:</strong> Enquanto estiver cozinhando,use uma espatula para virar uma parte sobre a outra,cozinhe até o ponto que preferir e após isso sirva.
 
             </li>
             <li>
 
-                <strong>Saboreie</strong> Sirva quente, com sal e pimenta se assim preferir,podendo usar outros temperos tranquilamente.
+                <strong>Saboreie:</strong> Sirva quente, com sal e pimenta se assim preferir,podendo usar outros temperos tranquilamente.
             </li>
 
 
