--- a/Receita/index.html
+++ b/Receita/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div>
-        <img src="omelete-crescer-1-1024x576.png" alt="imagem sobre um belo e lindo omelete">
+        <img src="./receita_base/assets/image-omelette.jpeg" alt="imagem sobre um belo e lindo omelete">
         <h1>Receita de omelete simples</h1>
         <p>Um prato simples de se preparar,que vai lhe fornecer uma boa quantidade de calorias,além de oferecer proteinas e carboidratos,
             ótimo para se comer no dia a dia e melhor ainda se recheá-lo
